Итерация 1_ПР-4_тесты 1

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <li class="card card_sprint-zero">
         <h3 class="title_card">Фритрек и нулевой спринт: Подготовка к работе</h3>
         <div class="container_image">
-          <img class="image_card image_zero-card" src="image/0 спринт.jpg" alt="Картинка автобуса">
+          <img class="image_card image_zero-card" src="images/0 спринт.jpg" alt="Картинка автобуса">
           <p class="label">&lt/HTML&gt</p>
         </div>
         <div class="text-card_container">
@@ -51,7 +51,7 @@
       <li class="card card_sprint-beginning">
         <h3 class="title_card">1 спринт: Я — чистый лист</h3>
         <div class="container_image">
-          <img class="image_card image_sprint-beginning" src="image/я читый лист.jpg" alt="Картинка автобуса">
+          <img class="image_card image_sprint-beginning" src="images/чистый лист.jpg" alt="Картинка автобуса">
           <p class="label">&lt/HTML&gt</p>
         </div>
         <div class="text-card_container">
@@ -79,7 +79,7 @@
       <li class="card card_sprint-fear">
         <h3 class="title_card">1 спринт: А если не получится?</h3>
         <div class="container_image">
-          <img class="image_card image_sprint-fear" src="image/а если не получится.jpg" alt="Картинка автобуса">
+          <img class="image_card image_sprint-fear" src="images/если не получится.jpg" alt="Картинка автобуса">
           <p class="label">&ltCSS&gt</p>
         </div>
         <div class="text-card_container">
@@ -106,7 +106,7 @@
       <li class="card card_sprint-desigions">
         <h3 class="title_card">2 спринт: Погоня за идеалом</h3>
         <div class="container_image">
-          <img class="image_card image_sprint-desigions" src="./image/погоня за идеалом.jpg" alt="Картинка автобуса">
+          <img class="image_card image_sprint-desigions" src="./images/погоня за идеалом.jpg" alt="Картинка автобуса">
           <p class="label">&ltdesigions&gt</p>
         </div>
         <div class="text-card_container">
@@ -134,7 +134,7 @@
       <li class="card card_sprint-care">
         <h3 class="title_card">2 спринт: О тех, кто рядом</h3>
         <div class="container_image">
-          <img class="image_card image_sprint-care" src="./image/О тех, кто рядом.jpg" alt="Картинка автобуса">
+          <img class="image_card image_sprint-care" src="images/те, кто рядом.jpg" alt="Картинка автобуса">
           <p class="label">&ltcare&gt</p>
         </div>
         <div class="text-card_container">
@@ -162,7 +162,7 @@
       <li class="card card_sprint-support">
         <h3 class="title_card">3 спринт: Обходные стратегии</h3>
         <div class="container_image">
-          <img class="image_card image_sprint-support" src="./image//обходные стратегии.jpg" alt="Картинка автобуса">
+          <img class="image_card image_sprint-support" src="./images//обходные стратегии.jpg" alt="Картинка автобуса">
           <p class="label">&ltsupport&gt</p>
         </div>
         <div class="text-card_container">
@@ -189,7 +189,7 @@
       <li class="card card_sprint-lifes-style">
         <h3 class="title_card">3 спринт: Когда опускаются руки</h3>
         <div class="container_image">
-          <img class="image_card image_sprint-lifes-style" src="./image/когда опускаются руки.jpg" alt="Картинка автобуса">
+          <img class="image_card image_sprint-lifes-style" src="./images/опускаются руки.jpg" alt="Картинка автобуса">
           <p class="label">&ltlifes-style: none;&gt</p>
         </div>
         <div class="text-card_container">
@@ -216,7 +216,7 @@
       <li class="card card_sprint-experience">
         <h3 class="title_card">«Сейчас я здесь»</h3>
         <div class="container_image">
-          <img class="image_card image_i-am-here" src="./image/сейчас я здесь.jpg" alt="Картинка автобуса">
+          <img class="image_card image_i-am-here" src="./images/сейчас я здесь.jpg" alt="Картинка автобуса">
           <p class="label">&ltexperience&gt</p>
         </div>
         <div class="text-card_container">
