--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="page">
   <header class="header friendly_block">
-    <h1 class="title">&lt/HTML&gt</h1>
+    <h1 class="title">&lt;/HTML&gt;</h1>
     <h2 class="subtitle">ЗАКРЫВАЮЩИЙ ТЕГ</h2>
   </header>
 
@@ -24,8 +24,8 @@
       <li class="card card_sprint-zero">
         <h3 class="title_card">Фритрек и нулевой спринт: Подготовка к работе</h3>
         <div class="container_image">
-          <img class="image_card image_zero-card" src="images/0 спринт.jpg" alt="Картинка автобуса">
-          <p class="label">&lt/HTML&gt</p>
+          <img class="image_card image_zero-card" src="images/0_спринт.jpg" alt="Картинка автобуса">
+          <p class="label">&lt;/HTML&gt;</p>
         </div>
         <div class="text-card_container">
         <p class="text_card">Это было самое начало пути. На этом этапе важно было проникнуться
@@ -51,8 +51,8 @@
       <li class="card card_sprint-beginning">
         <h3 class="title_card">1 спринт: Я — чистый лист</h3>
         <div class="container_image">
-          <img class="image_card image_sprint-beginning" src="images/чистый лист.jpg" alt="Картинка автобуса">
-          <p class="label">&lt/HTML&gt</p>
+          <img class="image_card image_sprint-beginning" src="images/чистый_лист.jpg" alt="Картинка автобуса">
+          <p class="label">&lt;/HTML&gt;</p>
         </div>
         <div class="text-card_container">
         <p class="text_card">На первых этапах мы работали со страхами и сомнениями, которые часто испытывают
@@ -79,8 +79,8 @@
       <li class="card card_sprint-fear">
         <h3 class="title_card">1 спринт: А если не получится?</h3>
         <div class="container_image">
-          <img class="image_card image_sprint-fear" src="images/если не получится.jpg" alt="Картинка автобуса">
-          <p class="label">&ltCSS&gt</p>
+          <img class="image_card image_sprint-fear" src="images/если_не_получится.jpg" alt="Картинка автобуса">
+          <p class="label">&lt;CSS&gt;</p>
         </div>
         <div class="text-card_container">
         <p class="text_card">Первый проект — позади! Но это всё ещё самое начало пути. Радость могла быстро
@@ -106,8 +106,8 @@
       <li class="card card_sprint-desigions">
         <h3 class="title_card">2 спринт: Погоня за идеалом</h3>
         <div class="container_image">
-          <img class="image_card image_sprint-desigions" src="./images/погоня за идеалом.jpg" alt="Картинка автобуса">
-          <p class="label">&ltdesigions&gt</p>
+          <img class="image_card image_sprint-desigions" src="./images/погоня_за_идеалом.jpg" alt="Картинка автобуса">
+          <p class="label">&lt;desigions&gt;</p>
         </div>
         <div class="text-card_container">
         <p class="text_card">На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы понять,
@@ -134,8 +134,8 @@
       <li class="card card_sprint-care">
         <h3 class="title_card">2 спринт: О тех, кто рядом</h3>
         <div class="container_image">
-          <img class="image_card image_sprint-care" src="images/те, кто рядом.jpg" alt="Картинка автобуса">
-          <p class="label">&ltcare&gt</p>
+          <img class="image_card image_sprint-care" src="images/те_кто_рядом.jpg" alt="Картинка автобуса">
+          <p class="label">&lt;care&gt;</p>
         </div>
         <div class="text-card_container">
         <p class="text_card">Всё это время вы были не одиноки (хотя, возможно, иногда и чувствовали, что одни
@@ -162,8 +162,8 @@
       <li class="card card_sprint-support">
         <h3 class="title_card">3 спринт: Обходные стратегии</h3>
         <div class="container_image">
-          <img class="image_card image_sprint-support" src="./images//обходные стратегии.jpg" alt="Картинка автобуса">
-          <p class="label">&ltsupport&gt</p>
+          <img class="image_card image_sprint-support" src="./images//обходные_стратегии.jpg" alt="Картинка автобуса">
+          <p class="label">&lt;support&gt;</p>
         </div>
         <div class="text-card_container">
         <p class="text_card">На этом курсе вы постоянно решали разные задачи. В какой-то момент вам могло
@@ -189,8 +189,8 @@
       <li class="card card_sprint-lifes-style">
         <h3 class="title_card">3 спринт: Когда опускаются руки</h3>
         <div class="container_image">
-          <img class="image_card image_sprint-lifes-style" src="./images/опускаются руки.jpg" alt="Картинка автобуса">
-          <p class="label">&ltlifes-style: none;&gt</p>
+          <img class="image_card image_sprint-lifes-style" src="./images/опускаются_руки.jpg" alt="Картинка автобуса">
+          <p class="label">&lt;lifes-style: none;&gt;</p>
         </div>
         <div class="text-card_container">
         <p class="text_card">Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься.
@@ -216,8 +216,8 @@
       <li class="card card_sprint-experience">
         <h3 class="title_card">«Сейчас я здесь»</h3>
         <div class="container_image">
-          <img class="image_card image_i-am-here" src="./images/сейчас я здесь.jpg" alt="Картинка автобуса">
-          <p class="label">&ltexperience&gt</p>
+          <img class="image_card image_i-am-here" src="./images/сейчас_я_здесь.jpg" alt="Картинка автобуса">
+          <p class="label">&lt;experience&gt;</p>
         </div>
         <div class="text-card_container">
         <p class="text_card">Сейчас вы уже очень много знаете о вёрстке. Но это только начало.
