--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <main class="content">
     <ol class="list_card">
 
-      <li class="card card_sprint-zero">
+      <li class="card card_sprint-preparation">
         <article class>
           <h3 class="title_card">Фритрек и нулевой спринт: Подготовка к работе</h3>
           <div class="container_image">
@@ -78,28 +78,28 @@
             <p class="text_card">Место для ваших воспоминаний о начале первого спринта.</p>
           </div>
           <div class="card__actions">
-              <button type="button" class="button__icon-like" aria-label="Поставить лайк">
-                <svg class="like-icon" width="40" height="40" viewBox="0 0 27 24" fill="none" aria-hidden="true">
-                  <g class="heart">
-                    <path class="contour"
-                      d="M8 4H6V6H8V4ZM10 4H8V6H10V4ZM6 6H4V8H6V6ZM6 8H4V10H6V8ZM6 10H4V12H6V10ZM12 4H10V6H12V4ZM8 12H6V14H8V12ZM10 14H8V16H10V14ZM12 16H10V18H12V16ZM18 4H20V6H18V4ZM16 4H18V6H16V4ZM20 6H22V8H20V6ZM20 8H22V10H20V8ZM20 10H22V12H20V10ZM14 4H16V6H14V4ZM18 12H20V14H18V12ZM16 14H18V16H16V14ZM14 16H16V18H14V16ZM14 18H12V20H14V18ZM14 6H12V8H14V6Z"
-                      fill="var(--contour-color)" />
-                    <path class="main-body"
-                      d="M8 6H6V8H8V6ZM10 8H8V10H10V8ZM12 6H10V8H12V6ZM8 10H6V12H8V10ZM10 10H8V12H10V10ZM10 12H8V14H10V12ZM12 8H10V10H12V8ZM12 14H10V16H12V14ZM12 12H10V14H12V12ZM18 6H20V8H18V6ZM16 6H18V8H16V6ZM18 8H20V10H18V8ZM16 8H18V10H16V8ZM14 6H16V8H14V6ZM18 10H20V12H18V10ZM16 10H18V12H16V10ZM16 12H18V14H16V12ZM14 8H16V10H14V8ZM14 14H16V16H14V14ZM14 12H16V14H14V12ZM14 14H12V16H14V14ZM14 16H12V18H14V16Z"
-                      fill="transparent" />
-                    <path class="core"
-                      d="M12 10H10V12H12V10ZM14 10H16V12H14V10ZM14 10H12V12H14V10ZM14 8H12V10H14V8ZM14 12H12V14H14V12Z"
-                      fill="transparent" />
-                  </g>
-                  <path class="sparks"
-                    d="M24 9H27V12H24V9ZM18 18H20V20H18V18ZM12 22H14V24H12V22ZM6 18H8V20H6V18ZM16 0H18V2H16V0ZM22 2H24V4H22V2ZM2 2H4V4H2V2ZM8 0H10V2H8V0ZM0 9H2V12H0V9Z"
-                    fill="var(--animation-fill-color)" />
-                </svg>
-              </button>
-              <button type="button" class="card__like-button card__icon-button is-liked button">
-                <span class="button__text">Like</span>
-              </button>
-            </div>
+            <button type="button" class="button__icon-like" aria-label="Поставить лайк">
+              <svg class="like-icon" width="40" height="40" viewBox="0 0 27 24" fill="none" aria-hidden="true">
+                <g class="heart">
+                  <path class="contour"
+                    d="M8 4H6V6H8V4ZM10 4H8V6H10V4ZM6 6H4V8H6V6ZM6 8H4V10H6V8ZM6 10H4V12H6V10ZM12 4H10V6H12V4ZM8 12H6V14H8V12ZM10 14H8V16H10V14ZM12 16H10V18H12V16ZM18 4H20V6H18V4ZM16 4H18V6H16V4ZM20 6H22V8H20V6ZM20 8H22V10H20V8ZM20 10H22V12H20V10ZM14 4H16V6H14V4ZM18 12H20V14H18V12ZM16 14H18V16H16V14ZM14 16H16V18H14V16ZM14 18H12V20H14V18ZM14 6H12V8H14V6Z"
+                    fill="var(--contour-color)" />
+                  <path class="main-body"
+                    d="M8 6H6V8H8V6ZM10 8H8V10H10V8ZM12 6H10V8H12V6ZM8 10H6V12H8V10ZM10 10H8V12H10V10ZM10 12H8V14H10V12ZM12 8H10V10H12V8ZM12 14H10V16H12V14ZM12 12H10V14H12V12ZM18 6H20V8H18V6ZM16 6H18V8H16V6ZM18 8H20V10H18V8ZM16 8H18V10H16V8ZM14 6H16V8H14V6ZM18 10H20V12H18V10ZM16 10H18V12H16V10ZM16 12H18V14H16V12ZM14 8H16V10H14V8ZM14 14H16V16H14V14ZM14 12H16V14H14V12ZM14 14H12V16H14V14ZM14 16H12V18H14V16Z"
+                    fill="transparent" />
+                  <path class="core"
+                    d="M12 10H10V12H12V10ZM14 10H16V12H14V10ZM14 10H12V12H14V10ZM14 8H12V10H14V8ZM14 12H12V14H14V12Z"
+                    fill="transparent" />
+                </g>
+                <path class="sparks"
+                  d="M24 9H27V12H24V9ZM18 18H20V20H18V18ZM12 22H14V24H12V22ZM6 18H8V20H6V18ZM16 0H18V2H16V0ZM22 2H24V4H22V2ZM2 2H4V4H2V2ZM8 0H10V2H8V0ZM0 9H2V12H0V9Z"
+                  fill="var(--animation-fill-color)" />
+              </svg>
+            </button>
+            <button type="button" class="card__like-button card__icon-button is-liked button">
+              <span class="button__text">Like</span>
+            </button>
+          </div>
         </article>
       </li>
 
@@ -146,7 +146,8 @@
         <article>
           <h3 class="title_card">2 спринт: Погоня за идеалом</h3>
           <div class="container_image">
-            <img class="image_card image_filter-hue-rotate" src="./images/погоня_за_идеалом.jpg" alt="Картинка автобуса">
+            <img class="image_card image_filter-hue-rotate" src="./images/погоня_за_идеалом.jpg"
+              alt="Картинка автобуса">
             <p class="label">&lt;desigions&gt;</p>
           </div>
           <div class="text-card_container">
@@ -251,7 +252,7 @@
                 </g>
                 <path class="sparks"
                   d="M24 9H27V12H24V9ZM18 18H20V20H18V18ZM12 22H14V24H12V22ZM6 18H8V20H6V18ZM16 0H18V2H16V0ZM22 2H24V4H22V2ZM2 2H4V4H2V2ZM8 0H10V2H8V0ZM0 9H2V12H0V9Z"
-                  fill="var(--animation-fill-color)"/>
+                  fill="var(--animation-fill-color)" />
               </svg>
             </button>
             <button type="button" class="card__like-button card__icon-button is-liked button">
